--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -34,6 +34,12 @@ spring:
             provider: default
             redirect-uri: ${frontend.domain}/login/oauth2/code/default
             scope: openid,email,profile
+          cognito:
+            client-id: ${OAUTH_CLIENT_ID:eventplanner}
+            client-secret: ${OAUTH_CLIENT_SECRET:********************}
+            provider: default
+            redirect-uri: ${frontend.domain}/login/oauth2/code/cognito
+            scope: openid,email,profile
         provider:
           default:
             issuer-uri: ${OAUTH_ISSUER_URI:https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_erXnjLJc7}
