--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,6 +9,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#000000"
+    "theme_color": "#082f49",
+    "background_color": "#082f49"
 }
