--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,10 +21,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.+'
     implementation 'org.springframework.boot:spring-boot-starter-security:3.3.+'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.3.+'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.+'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.3.+'
 
     // json parsing
-    implementation 'com.google.code.gson:gson:2.10.+'
+    implementation 'com.google.code.gson:gson:2.10.+' //todo why?
 
+    // sqlite
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.1.3'
+    implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
+    implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.1.Final'
     // excel
     implementation 'org.apache.poi:poi:5.2.+'
     implementation 'org.apache.poi:poi-ooxml:5.2.+'
@@ -37,6 +43,9 @@ dependencies {
     // https://stackoverflow.com/questions/53326271/spring-nullable-annotation-generates-unknown-enum-constant-warning
     // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    // monitoring
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
