--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,16 +1,16 @@
-version: "3.9"
-
 services:
   eventplanner:
+    # our app
     container_name: eventplanner
     image: ghcr.io/grossherzogin-elisabeth/eventplanner:1.0.0-alpha
     restart: unless-stopped
     volumes:
       - ./data:/app/data
     env_file:
-      - eventplanner.local.env
+      - .env
 
   keycloak:
+    # OpenSource identity manager
     container_name: keycloak
     image: quay.io/keycloak/keycloak:25.0.2
     restart: unless-stopped
@@ -22,20 +22,22 @@ services:
       - "8082:8080"
 
   tunnel:
+    # We use a CloudFlare Tunnel for making the app available via https. This has the advantages, that
+    # - our IP is not exposed
+    # - we don't need a static IP
+    # - we don't need to handle SSL certificates ourselves
+    # see https://www.cloudflare.com/de-de/products/tunnel/
     container_name: cloudflared-tunnel
     image: cloudflare/cloudflared
     restart: unless-stopped
     command: tunnel run
     env_file:
-      - tunnel.local.env
+      - .env
 
   watchtower:
+    # Automatically updates our docker images
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - WATCHTOWER_SCHEDULE=0 0 * * * *
-
-secrets:
-  my_secret:
-    file: ./secrets.txt
