--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.1.3'
     implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
     implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.1.Final'
+    implementation 'org.flywaydb:flyway-core:9.16.0'
+
     // excel
     implementation 'org.apache.poi:poi:5.2.+'
     implementation 'org.apache.poi:poi-ooxml:5.2.+'
