--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
-    url: jdbc:sqlite:data/eventplanner.db
+    url: jdbc:sqlite:${custom.data-directory}/eventplanner.db
   security:
     oauth2:
       client:
