--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -1,6 +1,4 @@
 data:
   generate-test-data: true
-  directory: data
+  db-url: jdbc:sqlite:eventplanner-test.db
 
-database:
-  url: jdbc:sqlite:${custom.data-directory}/eventplanner-test.db
