add missing property

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,6 +18,7 @@ email:
   enable-starttls: ${EMAIL_ENABLE_START_TLS:true}
   enable-ssl: ${EMAIL_ENABLE_SSL:false}
   footer: ${EMAIL_FOOTER:}
+  recipients-whitelist:
 
 auth:
   logout-success-url: ${frontend.domain}/login
