--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.6.0",
         "feiertagejs": "^1.4.1",
+        "i18n-iso-countries": "^7.12.0",
         "svg-country-flags": "^1.2.10",
         "uuid": "^10.0.0",
         "vue": "^3.5.12",
@@ -26,8 +27,6 @@
         "vuejs3-datepicker": "^1.1.3"
     },
     "devDependencies": {
-        "@volar/language-server": "2.4.8",
-        "@vue/language-server": "2.1.8",
         "@babel/core": "^7.26.0",
         "@babel/preset-env": "^7.26.0",
         "@babel/preset-typescript": "^7.26.0",
@@ -35,7 +34,9 @@
         "@types/node": "^22.8.1",
         "@types/uuid": "^10.0.0",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@volar/language-server": "2.4.8",
         "@vue/eslint-config-typescript": "^14.1.3",
+        "@vue/language-server": "2.1.8",
         "autoprefixer": "^10.4.17",
         "eslint": "^9.13.0",
         "eslint-config-prettier": "^9.1.0",
