--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -21,6 +21,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
+        "baseUrl": "./",
         "paths": {
             "@/*": ["src/*"]
         }
