--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "svg-country-flags": "^1.2.10",
         "uuid": "^10.0.0",
         "vue": "^3.5.12",
+        "vue-draggable-next": "^2.2.1",
         "vue-i18n": "^9.10.2",
         "vue-router": "^4.4.5",
         "vuedraggable": "^4.1.0",
