--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^6.6.0",
         "feiertagejs": "^1.4.1",
         "i18n-iso-countries": "^7.12.0",
+        "i18n-nationality": "^1.4.0",
         "svg-country-flags": "^1.2.10",
         "uuid": "^10.0.0",
         "vue": "^3.5.12",
