add registration confirmation flow
# Conflicts:
#	backend/src/main/java/org/eventplanner/events/rest/RegistrationController.java
#	backend/src/main/java/org/eventplanner/events/rest/dto/UpdateEventRequest.java
#	backend/src/main/java/org/eventplanner/importer/service/EventExcelImporter.java
#	backend/src/main/java/org/eventplanner/notifications/service/NotificationService.java
#	backend/src/main/java/org/eventplanner/testdata/EventGenerator.java

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     // monitoring
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
+    // util
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
+
 }
 
 tasks.named('test') {
