--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
         "@babel/core": "^7.26.0",
         "@babel/preset-env": "^7.26.0",
         "@babel/preset-typescript": "^7.26.0",
+        "@material/material-color-utilities": "^0.3.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/node": "^22.8.1",
         "@types/uuid": "^10.0.0",
