--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "feiertagejs": "^1.4.1",
         "i18n-iso-countries": "^7.12.0",
         "i18n-nationality": "^1.4.0",
+        "markdown-it": "^14.1.0",
         "svg-country-flags": "^1.2.10",
         "uuid": "^10.0.0",
         "vue": "^3.5.12",
@@ -35,6 +36,7 @@
         "@babel/preset-typescript": "^7.26.0",
         "@material/material-color-utilities": "^0.3.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/markdown-it": "^14.1.2",
         "@types/node": "^22.8.1",
         "@types/uuid": "^10.0.0",
         "@vitejs/plugin-vue": "^5.0.4",
