--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,16 +18,16 @@ repositories {
 
 dependencies {
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.3.4'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.4'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.4.0'
 
     // sqlite
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.1.3'
+    implementation 'org.xerial:sqlite-jdbc:3.46.1.3'
     implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
     implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.1.Final'
     implementation 'org.flywaydb:flyway-core:9.16.0'
@@ -37,7 +37,7 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:5.2.+'
 
     // tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.4'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.0'
     testImplementation 'org.springframework.security:spring-security-test:6.3.+'
 
     // silence 'unknown enum constant javax.annotation.meta.When.MAYBE' warning
