--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,11 +18,13 @@ email:
   enable-starttls: ${EMAIL_ENABLE_START_TLS:true}
   enable-ssl: ${EMAIL_ENABLE_SSL:false}
   footer: ${EMAIL_FOOTER:}
-  recipients-whitelist:
+  # If not empty email notifications will only be sent to these email addresses
+  recipients-whitelist: ${EMAIL_WHITELIST:}
 
 auth:
   logout-success-url: ${frontend.domain}/login
   login-success-url: ${frontend.domain}
+  # OIDC users with this email address in their token will automatically become admins
   admins: ${ADMIN_EMAILS:}
   # 60 * 60 * 24 * 30 seconds
   session-timout: 2592000
@@ -76,10 +78,10 @@ spring:
     timeout: ${auth.session-timout}
 
 server:
-  protocol: ${SERVER_PROTOCOL:http}
-  host: ${SERVER_HOST:localhost}
-  port: ${SERVER_PORT:8080}
-  domain: ${SERVER_URI:${server.protocol}://${server.host}:${server.port}}
+  protocol: ${PROTOCOL:http}
+  host: ${HOST:localhost}
+  port: ${PORT:8080}
+  domain: ${HOSTNAME_URL:${server.protocol}://${server.host}:${server.port}}
   servlet:
     session:
       timeout: ${auth.session-timout}s
@@ -91,3 +93,8 @@ frontend:
   host: ${server.host}
   port: ${server.port}
   domain: ${frontend.protocol}://${frontend.host}:${frontend.port}
+
+logging:
+  file:
+    path:
+      ./logs
