--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -44,8 +44,15 @@ data:
     directory: ${DATA_IMPORT_DIRECTORY:${data.directory}/import}
 
 spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 1
+    driver-class-name: org.sqlite.JDBC
+    url: jdbc:sqlite:${data.directory}/eventplanner.db
   jpa:
-    database-platform: org.hibernate.community.dialect.SQLiteDialect
+    database-platform: com.sqlite.config.SQLiteDialect
+    hibernate:
+      ddl-auto: update
   flyway:
     enabled: true
     locations: classpath:db/migration
