improve logging output

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -99,3 +99,7 @@ logging:
   file:
     path:
       ./logs
+  pattern:
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd'T'HH:mm:ss. SSSXXX}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr([%mdc{user:-system}]){yellow}%clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+  level:
+    root: INFO
