--- a/.github/workflows/check-frontend.yml
+++ b/.github/workflows/check-frontend.yml
@@ -2,6 +2,12 @@ name: Check frontend
 
 on:
   pull_request:
+    branches:
+      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 jobs:
   validate:
