--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,4 +1,4 @@
-name: Check frontend
+name: Frontend
 
 on:
   pull_request:
@@ -27,23 +27,19 @@ jobs:
       - name: Install dependencies
         shell: bash
         working-directory: frontend
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Check format
         shell: bash
         working-directory: frontend
-        run: |
-          npm run check:format
+        run: npm run check:format
 
       - name: Check eslint
         shell: bash
         working-directory: frontend
-        run: |
-          npm run check:lint
+        run: npm run check:lint
 
       - name: Check build
         shell: bash
         working-directory: frontend
-        run: |
-          npm run build
+        run: npm run build
