--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,10 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "compile": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-        "build": "npm run compile && vite build",
         "preview": "vite preview",
+        "build": "vue-tsc --noEmit -p tsconfig.app.json --composite false && vite build",
         "lint": "npx eslint --fix src",
         "format": "./node_modules/.bin/prettier . --ignore-path .gitignore --write",
-        "check:fix": "npm run format && npm run lint && npm run compile",
         "check:format": "./node_modules/.bin/prettier --ignore-path .gitignore --check .",
         "check:lint": "npx eslint src",
         "check:typescript": "vue-tsc"
