--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.2'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.4.3'
+    id 'io.spring.dependency-management' version '1.1.7'
     id 'io.freefair.lombok' version '8.6'
 }
 
 group = 'org.eventplanner'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-SNAPSHOT'
 
 java {
     sourceCompatibility = '21'
@@ -18,27 +18,27 @@ repositories {
 
 dependencies {
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.4.3'
 
     // sqlite
     implementation 'org.xerial:sqlite-jdbc:3.46.1.3'
-    implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
-    implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.1.Final'
-    implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'org.hibernate.orm:hibernate-core:6.6.1.Final'
+    implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.1.Final'
+    implementation 'org.flywaydb:flyway-core:10.20.0'
 
     // excel
-    implementation 'org.apache.poi:poi:5.2.+'
-    implementation 'org.apache.poi:poi-ooxml:5.2.+'
+    implementation 'org.apache.poi:poi:5.3.0'
+    implementation 'org.apache.poi:poi-ooxml:5.3.0'
 
     // tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.0'
-    testImplementation 'org.springframework.security:spring-security-test:6.3.+'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.3'
+    testImplementation 'org.springframework.security:spring-security-test:6.3.3'
 
     // silence 'unknown enum constant javax.annotation.meta.When.MAYBE' warning
     // https://stackoverflow.com/questions/53326271/spring-nullable-annotation-generates-unknown-enum-constant-warning
@@ -49,8 +49,7 @@ dependencies {
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
     // util
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
-
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
 }
 
 tasks.named('test') {
