--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,17 +38,13 @@ data:
   directory: ${DATA_DIRECTORY:data}
   encryption-password: ${DATA_ENCRYPTION_PASSWORD:default-encryption-password}
   db-url: jdbc:sqlite:${data.directory}/eventplanner.db
-  generate-test-data: false
-  import:
-    users-excel-password: ${USERS_EXCEL_PASSWORD:}
-    directory: ${DATA_IMPORT_DIRECTORY:${data.directory}/import}
 
 spring:
   datasource:
     hikari:
       maximum-pool-size: 1
     driver-class-name: org.sqlite.JDBC
-    url: jdbc:sqlite:${data.directory}/eventplanner.db
+    url: ${data.db-url}
   jpa:
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
