--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,15 +1,16 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.4.3'
-    id 'io.spring.dependency-management' version '1.1.7'
-    id 'io.freefair.lombok' version '8.12.2.1'
+    id "java"
+    id "jacoco"
+    id "org.springframework.boot" version "3.4.3"
+    id "io.spring.dependency-management" version "1.1.7"
+    id "io.freefair.lombok" version "8.12.2.1"
 }
 
-group = 'org.eventplanner'
-version = '1.0.0-SNAPSHOT'
+group = "org.eventplanner"
+version = "1.0.0-SNAPSHOT"
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = "21"
 }
 
 repositories {
@@ -18,40 +19,40 @@ repositories {
 
 dependencies {
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.4.3'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.4.3'
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-client:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-security:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-web:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-data-jdbc:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-freemarker:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-mail:3.4.3"
 
     // sqlite
-    implementation 'org.xerial:sqlite-jdbc:3.46.1.3'
-    implementation 'org.hibernate.orm:hibernate-core:6.6.10.Final'
-    implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.10.Final'
-    implementation 'org.flywaydb:flyway-core:10.20.0'
+    implementation "org.xerial:sqlite-jdbc:3.46.1.3"
+    implementation "org.hibernate.orm:hibernate-core:6.6.10.Final"
+    implementation "org.hibernate.orm:hibernate-community-dialects:6.6.10.Final"
+    implementation "org.flywaydb:flyway-core:10.20.0"
 
     // excel
-    implementation 'org.apache.poi:poi:5.4.0'
-    implementation 'org.apache.poi:poi-ooxml:5.4.0'
+    implementation "org.apache.poi:poi:5.4.0"
+    implementation "org.apache.poi:poi-ooxml:5.4.0"
 
     // tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.3'
-    testImplementation 'org.springframework.security:spring-security-test:6.4.3'
+    testImplementation "org.springframework.boot:spring-boot-starter-test:3.4.3"
+    testImplementation "org.springframework.security:spring-security-test:6.4.3"
 
-    // silence 'unknown enum constant javax.annotation.meta.When.MAYBE' warning
+    // silence "unknown enum constant javax.annotation.meta.When.MAYBE" warning
     // https://stackoverflow.com/questions/53326271/spring-nullable-annotation-generates-unknown-enum-constant-warning
     // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation "com.google.code.findbugs:jsr305:3.0.2"
 
     // monitoring
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    runtimeOnly "io.micrometer:micrometer-registry-prometheus"
 
     // util
-    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation "org.apache.commons:commons-lang3:3.17.0"
 }
 
-tasks.named('test') {
+tasks.named("test") {
     useJUnitPlatform()
 }
