--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "org.apache.commons:commons-lang3:3.17.0"
 }
 
-tasks.named("test") {
+test {
     useJUnitPlatform()
+    testLogging.showStandardStreams = true
 }
