--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,13 +1,13 @@
 name: Frontend
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
-      - main
+    - main
     types:
-      - opened
-      - reopened
-      - synchronize
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   validate:
@@ -16,30 +16,30 @@ jobs:
       contents: read
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.8.0
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22.8.0
 
-      - name: Install dependencies
-        shell: bash
-        working-directory: frontend
-        run: npm ci
+    - name: Install dependencies
+      shell: bash
+      working-directory: frontend
+      run: npm ci
 
-      - name: Check format
-        shell: bash
-        working-directory: frontend
-        run: npm run check:format
+    - name: Check format
+      shell: bash
+      working-directory: frontend
+      run: npm run check:format
 
-      - name: Check eslint
-        shell: bash
-        working-directory: frontend
-        run: npm run check:lint
+    - name: Check eslint
+      shell: bash
+      working-directory: frontend
+      run: npm run check:lint
 
-      - name: Check build
-        shell: bash
-        working-directory: frontend
-        run: npm run build
+    - name: Check build
+      shell: bash
+      working-directory: frontend
+      run: npm run build
