run workflows only when there are changes in the relevant files

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,6 +8,10 @@ on:
     - opened
     - reopened
     - synchronize
+    paths:
+    - 'backend/build.gradle'
+    - 'backend/settings.gradle'
+    - 'backend/src/**'
 
 jobs:
   validate:
