--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -8,7 +8,8 @@ on:
     - opened
     - reopened
     - synchronize
-
+    paths:
+    - 'frontend/**'
 jobs:
   validate:
     runs-on: ubuntu-latest
