--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,32 +13,38 @@ java {
     sourceCompatibility = "21"
 }
 
+ext {
+    springBootVersion = "3.4.4"
+    hibernateVersion = "6.6.11.Final"
+    apachePoiVersion = "5.4.0"
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     // spring
-    implementation "org.springframework.boot:spring-boot-starter-oauth2-client:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-security:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-web:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-data-jdbc:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-freemarker:3.4.3"
-    implementation "org.springframework.boot:spring-boot-starter-mail:3.4.3"
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-client:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-security:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-mail:${springBootVersion}"
 
     // sqlite
     implementation "org.xerial:sqlite-jdbc:3.46.1.3"
-    implementation "org.hibernate.orm:hibernate-core:6.6.11.Final"
-    implementation "org.hibernate.orm:hibernate-community-dialects:6.6.11.Final"
+    implementation "org.hibernate.orm:hibernate-core:${hibernateVersion}"
+    implementation "org.hibernate.orm:hibernate-community-dialects:${hibernateVersion}"
     implementation "org.flywaydb:flyway-core:10.20.0"
 
     // excel
-    implementation "org.apache.poi:poi:5.4.0"
-    implementation "org.apache.poi:poi-ooxml:5.4.0"
+    implementation "org.apache.poi:poi:${apachePoiVersion}"
+    implementation "org.apache.poi:poi-ooxml:${apachePoiVersion}"
 
     // tests
-    testImplementation "org.springframework.boot:spring-boot-starter-test:3.4.3"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
     testImplementation "org.springframework.security:spring-security-test:6.4.3"
 
     // silence "unknown enum constant javax.annotation.meta.When.MAYBE" warning
