--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: Build and push Docker container
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      version:
+        default: 1.0.0
+        description: Version of this build
+        type: string
 
 jobs:
   build-and-push-container:
@@ -17,60 +19,60 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.10.0
+    # Set up BuildKit Docker container builder to be able to build
+    # multi-platform images and export cache
+    # https://github.com/docker/setup-buildx-action
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3.10.0
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into ghcr registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3.4.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    # Login against a Docker registry except on PR
+    # https://github.com/docker/login-action
+    - name: Log into ghcr registry
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3.4.0
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date '+%Y-%m-%d %H:%M:%S')"
+    # Build and push Docker image with Buildx (don't push on PR)
+    # https://github.com/docker/build-push-action
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date '+%Y-%m-%d %H:%M:%S')"
 
-      - name: Build and push Docker image (main)
-        if: ${{ github.ref == 'refs/heads/main' }}
-        id: build-and-push-main
-        uses: docker/build-push-action@v6.15.0
-        with:
-          context: .
-          build-args: |
-            COMMIT=${{ github.sha }}
-            BRANCH=${{ github.head_ref || github.ref_name }} 
-            TIME=${{ steps.date.outputs.date }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            ghcr.io/grossherzogin-elisabeth/eventplanner:latest
-            ghcr.io/grossherzogin-elisabeth/eventplanner:1.0.0-alpha
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+    - name: Build and push Docker image (main)
+      if: ${{ github.ref == 'refs/heads/main' }}
+      id: build-and-push-main
+      uses: docker/build-push-action@v6.15.0
+      with:
+        context: .
+        build-args: |
+          COMMIT=${{ github.sha }}
+          BRANCH=${{ github.head_ref || github.ref_name }} 
+          TIME=${{ steps.date.outputs.date }}
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ghcr.io/grossherzogin-elisabeth/eventplanner:latest
+          ghcr.io/grossherzogin-elisabeth/eventplanner:${{ inputs.version }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
-      - name: Build and push Docker image (dev)
-        if: ${{ github.ref != 'refs/heads/main' }}
-        id: build-and-push-dev
-        uses: docker/build-push-action@v6.15.0
-        with:
-          context: .
-          build-args: |
-            COMMIT=${{ github.sha }}
-            BRANCH=${{ github.head_ref || github.ref_name }} 
-            TIME=${{ steps.date.outputs.date }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            ghcr.io/grossherzogin-elisabeth/eventplanner:${{ github.head_ref || github.ref_name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+    - name: Build and push Docker image (dev)
+      if: ${{ github.ref != 'refs/heads/main' }}
+      id: build-and-push-dev
+      uses: docker/build-push-action@v6.15.0
+      with:
+        context: .
+        build-args: |
+          COMMIT=${{ github.sha }}
+          BRANCH=${{ github.head_ref || github.ref_name }} 
+          TIME=${{ steps.date.outputs.date }}
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ghcr.io/grossherzogin-elisabeth/eventplanner:${{ github.head_ref || github.ref_name }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
