--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,6 +20,7 @@ email:
   footer: ${EMAIL_FOOTER:}
   # If not empty email notifications will only be sent to these email addresses
   recipients-whitelist: ${EMAIL_WHITELIST:}
+  title-prefix: ''
 
 auth:
   logout-success-url: ${frontend.url}/login
