--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "org.springframework.boot" version "3.4.5"
     id "io.spring.dependency-management" version "1.1.7"
     id "io.freefair.lombok" version "8.13.1"
+    id "net.ltgt.errorprone" version "4.2.0"
 }
 
 group = "org.eventplanner"
@@ -17,6 +18,21 @@ ext {
     springBootVersion = "3.4.5"
     hibernateVersion = "6.6.13.Final"
     apachePoiVersion = "5.4.1"
+}
+
+import net.ltgt.gradle.errorprone.CheckSeverity
+
+tasks.withType(JavaCompile) {
+    options.errorprone {
+        check("NullAway", CheckSeverity.ERROR)
+        option("NullAway:AnnotatedPackages", "com.uber")
+    }
+    // Include to disable NullAway on test code
+    if (name.toLowerCase().contains("test")) {
+        options.errorprone {
+            disable("NullAway")
+        }
+    }
 }
 
 repositories {
@@ -57,6 +73,13 @@ dependencies {
 
     // util
     implementation "org.apache.commons:commons-lang3:3.17.0"
+    // https://mvnrepository.com/artifact/org.jspecify/jspecify
+    implementation("org.jspecify:jspecify:1.0.0")
+
+    // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core
+    errorprone "com.google.errorprone:error_prone_core:2.38.0"
+
+    errorprone "com.uber.nullaway:nullaway:0.12.7"
 }
 
 test {
