--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,6 +24,16 @@ notifications:
     enabled: true
   user-data-changed:
     enabled: true
+  qualification-added:
+    enabled: true
+  qualification-updated:
+    enabled: true
+  qualification-removed:
+    enabled: false
+  qualification-close-to-expired:
+    enabled: true
+  qualification-expired:
+    enabled: true
 
 email:
   # If not empty, email notifications will only be sent to these email addresses
