read notification enabled toggle on cron job

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -29,7 +29,7 @@ notifications:
   qualification-updated:
     enabled: true
   qualification-removed:
-    enabled: false
+    enabled: true
   qualification-close-to-expired:
     enabled: true
   qualification-expired:
