send notificaitons for added, updated, removed and expired qualificat… (#189)
* implement qualification notifications

* fix test

* cleanup

* read notification enabled toggle on cron job

* update email templates

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,6 +24,16 @@ notifications:
     enabled: true
   user-data-changed:
     enabled: true
+  qualification-added:
+    enabled: true
+  qualification-updated:
+    enabled: true
+  qualification-removed:
+    enabled: true
+  qualification-close-to-expired:
+    enabled: false
+  qualification-expired:
+    enabled: false
 
 email:
   # If not empty, email notifications will only be sent to these email addresses
