--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
         "@babel/preset-env": "^7.28.0",
         "@babel/preset-typescript": "^7.27.1",
         "@material/material-color-utilities": "^0.3.0",
+        "@modyfi/vite-plugin-yaml": "^1.1.1",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/markdown-it": "^14.1.2",
         "@types/node": "^22.15.35",
