--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
         "preview": "vite preview",
         "build": "vue-tsc --noEmit -p tsconfig.app.json --composite false && vite build",
         "lint": "npx eslint --fix src",
-        "format": "./node_modules/.bin/prettier . --ignore-path .gitignore --write",
+        "format": "./node_modules/.bin/prettier . --ignore-path .gitignore --ignore-path .prettierignore --write",
         "check:format": "./node_modules/.bin/prettier --ignore-path .gitignore --check .",
         "check:lint": "npx eslint src",
         "check:typescript": "vue-tsc"
