--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "org.springframework.boot" version "3.5.4"
     id "io.spring.dependency-management" version "1.1.7"
     id "io.freefair.lombok" version "8.14"
+    id "org.sonarqube" version "6.3.1.5724"
 }
 
 group = "org.eventplanner"
@@ -63,4 +64,11 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "grossherzogin-elisabeth_eventplanner"
+        property "sonar.organization", "grossherzogin-elisabeth"
+    }
 }
