--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -80,5 +80,6 @@ sonar {
         property "sonar.organization", "grossherzogin-elisabeth"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.plugins.downloadOnlyRequired", true
+        property "sonar.coverage.jacoco.xmlReportPaths", "backend/build/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
