--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,4 +34,4 @@ jobs:
         working-directory: ./backend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info
+        run: ./gradlew build jacocoTestReport sonar --info
