--- a/.github/workflows/validate_backend.yml
+++ b/.github/workflows/validate_backend.yml
@@ -13,6 +13,7 @@ on:
       - reopened
       - synchronize
     paths:
+      - '.github/workflows'
       - 'backend/build.gradle'
       - 'backend/settings.gradle'
       - 'backend/src/**'
