add DataJpaTest.properties for DB-Repository-Tests & enforce @NonNull constraints across repositories, entities, and use cases for improved null safety
(cherry picked from commit ad90e2f9afa285eba465b309e21042fe1228d052)

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
     testImplementation "org.springframework.security:spring-security-test:6.5.6"
     testImplementation "com.tngtech.archunit:archunit:1.4.1"
-
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    testImplementation 'com.h2database:h2:2.4.+'
     // silence "unknown enum constant javax.annotation.meta.When.MAYBE" warning
     // https://stackoverflow.com/questions/53326271/spring-nullable-annotation-generates-unknown-enum-constant-warning
     // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
