run tests in pipeline

--- a/.github/workflows/validate_frontend.yml
+++ b/.github/workflows/validate_frontend.yml
@@ -45,3 +45,8 @@ jobs:
         shell: bash
         working-directory: frontend
         run: npm run build
+
+      - name: Check tests
+        shell: bash
+        working-directory: frontend
+        run: npm run test
