--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "build": "vue-tsc --noEmit -p tsconfig.app.json --composite false && vite build",
         "lint": "npx eslint --fix src",
         "format": "./node_modules/.bin/prettier . --ignore-path .gitignore --ignore-path .prettierignore --write",
+        "test": "vitest",
         "check:format": "./node_modules/.bin/prettier --ignore-path .gitignore --ignore-path .prettierignore --check .",
         "check:lint": "npx eslint src",
         "check:typescript": "vue-tsc"
